# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [4.0.1] - UNRELEASED

### Added

- O comando TOP foi reescrito! Adicionados novos tipos de top: `estatísticas!`. Veja os melhores jogadores dos jogos de todos os tempos com o novo `/top`
- Novo Comando de Estatísticas! `/status bicho` - Mostra as estatísticas do jogo do bicho de alguém
- Desgigners agora recebem uma DM da Menhera quando um design de sua autoria é comprado. Isso pode ser desativado no comando `/status designer`
- Quatro novos designs do Relkhin (853341889016365097). Perfis `iD03` e `Um Propósito Sem Alma`, fundo de carta `Lamenta Caelorum` e Mesa de Cartas `Partida Atemporal`.
- Status de Roleta `/status roleta`
- **Sistema de PvP:** Usuários podem batalhar em uma batalha justa, ou desnivelada, depende do invocador do comando. Batalhas justas são alinhadas com TODOS os jogadores nível **10**, com todas habilidades da classe desbloqueadas no nível 2. NOVOS COMANDOS:
  - `/arena configurar` - Configura suas bênçãos para uma batalha justa. (Você pode resetar os pontos a qualquer momento)
  - `/arena batalhar` - Chama um jogador para 1x1. Nada vale aqui, os valores de vida e mana serão todos resetados, e ninguém perderá vida fora da Arena.
- Comandos de ação agora aceitam motivos. Diga para a Menhera o porquê de tu estar tomando aquela ação, e ela mostrará pra todos isso
- O cooldown da dungeon agora aparece no `/cooldowns`
- Novos comandos para imagens de usuários:
  - `/user banner` Mostra o banner de um usuário (se ele tiver)
  - `/user avatar` Mostra o avatar de um usuário (pode ser o avatar customizado de servidor)