@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ### Added
 
+- **TRADUÇÕES:** Todos os comandos da Menhera são traduzidos para inglês (os nomes e descrições nos slash commands).
 - O comando TOP foi reescrito! Adicionados novos tipos de top: `estatísticas!`. Veja os melhores jogadores dos jogos de todos os tempos com o novo `/top`
 - Novo Comando de Estatísticas! `/status bicho` - Mostra as estatísticas do jogo do bicho de alguém
 - Desgigners agora recebem uma DM da Menhera quando um design de sua autoria é comprado. Isso pode ser desativado no comando `/status designer`
@@ -33,6 +34,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ### Changed
 
+- O comando `/loja info` foi renomeado para `/loja precos`
 - O comando trisal agora mostra um botão de terminar, e é por lá que alguém do casal poderá encerrar a relação
 - Blackjack: Caso o usuário inicie com um blackjack em mãos, a partida terminará, e o jogador receberá o dobro do prêmio
 - Comando `/status design` foi renomeado para `/status designer`
